2002-12-17  John Sullivan  <sullivan@apple.com>

	- to help with performance of various bookmark operations,
	added a call that returns the internal array of children,
	to complement the safer call that returns a copy.

        Reviewed by Darin

        * Bookmarks.subproj/WebBookmark.h:
	commented -children and new -rawChildren
        * Bookmarks.subproj/WebBookmark.m:
        (-[WebBookmark rawChildren]):
	new method, returns nil at this level.
        (-[WebBookmark contentMatches:]):
	use -rawChildren instead of -children

        * Bookmarks.subproj/WebBookmarkList.m:
        (-[WebBookmarkList rawChildren]):
	new method, returns internal array without copying

2002-12-16  Darin Adler  <darin@apple.com>

        Reviewed by Don and Maciej.

        * WebView.subproj/WebUserAgentSpoofTable.gperf: Added a couple of new domains to the list we
	spoof as Mac IE, and added comments.
        * WebView.subproj/WebUserAgentSpoofTable.c: Regenerated.

        * WebKit.pbproj/project.pbxproj: Set MACOSX_DEPLOYMENT_TARGET to 10.2

2002-12-16  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3129503 - Crash cancelling download after closing browser window that started download

        Reviewed by rjw.

        * WebView.subproj/WebDataSourcePrivate.m:
        (-[WebDataSource _setLoading:]): Added comment about our tragic dependence on a non-retained reference to the controller.
        (-[WebDataSource _recursiveStopLoading]): Call webFrame before calling _stopLoading because we release the controller in _stopLoading and we depend on it in webFrame.

=== Alexander-37 ===

2002-12-16  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by no one but it's just a version bump.

        * WebKit.pbproj/project.pbxproj: Bump version to 37u3

2002-12-16  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3128858 -- Supply Finder bits for decoded BinHex files

        * Downloads.subproj/WebBinHexDecoder.h: Add a _finderFlags field.